Attempt to fix CSS and JS not showing when deploy to GH Pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,12 +209,12 @@ nav i {
 /* main */
 
 /* main {
-  background: url(../../assets/img/bg.png) repeat;
+  background: url(../..https://kcui0327.github.io/PRA1-ECE444/assets/img/bg.png) repeat;
   padding-left: 190px;
 } */
 
 main {
-  background: url(../../assets/img/bg.png) repeat;
+  background: url(../..https://kcui0327.github.io/PRA1-ECE444/assets/img/bg.png) repeat;
   padding-left: 190px;
 }
 
@@ -365,7 +365,7 @@ h3 {
 /* Original */
 
 /* #intro.section {
-  background: url(../../assets/img/white-ai-wallpaper.jpg) no-repeat top center/cover;
+  background: url(../..https://kcui0327.github.io/PRA1-ECE444/assets/img/white-ai-wallpaper.jpg) no-repeat top center/cover;
   position: relative;
 } */
 
